# sentencing-council-scraper

./: .gitignore  LICENSE  README.md  debug_scripts.py  debug_structure.py  main.py
.github/workflows/: publish-pages.yml
data/: index.html
scraper/: config.py  crawler.py  export.py  index_tabs.py  models.py  parser.py  supplementary_parser.py
sentence_chat_product/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
sentence_chat_product/docs/: chatgpt_actions.md  deploy_supabase.md  local_run_summary.md
sentence_chat_product/scripts/: run_api.sh  run_etl.sh
sentence_chat_product/src/sentence_chat_product/: __init__.py  config.py
sentence_chat_product/src/sentence_chat_product/api/: main.py  schemas.py
sentence_chat_product/src/sentence_chat_product/core/: calculator.py  retrieval.py  rules.py  types.py
sentence_chat_product/src/sentence_chat_product/db/: repository.py  schema.sql
sentence_chat_product/src/sentence_chat_product/etl/: build_dataset.py  embed_chunks.py  load_to_postgres.py  utils.py
sentence_chat_product/tests/: test_etl_mapping.py  test_rules.py
sentence_chat_product_supabase/: README.md  openapi.json
sentence_chat_product_supabase/supabase/functions/_shared/: router.ts
sentence_chat_product_supabase/supabase/functions/calculate-sentence/: index.ts
sentence_chat_product_supabase/supabase/functions/chat-turn/: index.ts
sentence_chat_product_supabase/supabase/sql/: edge_rpcs.sql
tests/: test_crawler.py  test_parsers.py
tests/fixtures/: guideline_page.html  magistrates_index.html  supplementary_page.html
(+2 files in other folders)
